# stitch-mvp

./: .editorconfig  .env.example  .gitattributes  .gitignore  .lintstagedrc.json  .prettierignore  DEPLOY.md  README.md  SETUP.md  commitlint.config.cjs  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: admin.py  amenities.py  discover.py  gate.py  (+8 more)
apps/api/app/core/: auth.py  config.py  database.py  exceptions.py  logging.py  redis.py  security.py
apps/api/app/models/: __init__.py  ai.py  audit.py  base.py  notifications.py  ops.py  social.py  unit.py  user.py
apps/api/app/schemas/: amenities.py  discover.py  family.py  feed.py  gate.py  maintenance.py  notifications.py  parking.py  requests.py  service_bookings.py  visitor_pass.py
apps/api/app/services/: amenities_hub.py  discover_hub.py  family_hub.py  feed_hub.py  gate_simulator.py  maintenance_slots.py  notifications_hub.py  parking_hub.py  requests_hub.py  service_bookings_hub.py  visitor_passes_hub.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 46339d7c2ae3_initial_schema.py  a4d72e8b5961_add_family_members_table.py  b8c3a7f4d215_add_service_bookings_table.py  b9f3a2e76054_add_discover_funnel_tables.py  c1e84d57a932_add_discover_booking_status_and_admin_notes.py  c9d4a8e7f320_add_admin_notes_to_service_bookings.py  d2f95c8a6e10_add_technicians_and_maintenance_booking_columns.py  d3f5b1a78e94_add_maintenance_schedule_columns.py  e26eaa5a5b5e_align_maintenance_requests_to_wire_.py  e4a7b1f93c25_amenity_booking_time_slot_and_admin_notes.py  f7b2e9d61c84_add_amenities_and_amenity_bookings_.py
apps/api/scripts/: seed.py  smoke_db.py
apps/api/tests/: conftest.py  test_health.py
(+261 files in other folders)
