[project]
name = "stitch-api"
version = "0.1.0"
description = "Stitch backend — FastAPI + async SQLAlchemy + Gemini Live voice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "redis[hiredis]>=5.2.0",
    "google-genai>=0.3.0",
    "pyjwt[crypto]>=2.10.0",
    "httpx>=0.28.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.18",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["N", "I"]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["migrations/", "build/", "dist/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --tb=short"
